# geosales-intelligence-platform

./: LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
backend/api/: health.py
backend/config/: database.py  logging.py  settings.py
backend/core/: config.py  database.py  dependencies.py  exceptions.py  middleware.py  security.py
backend/models/: base.py  customer.py  dealer.py  gps_data.py  predictions.py  sales.py  user.py
backend/repositories/: base.py  customer_repo.py  dealer_repo.py  gps_repo.py  sales_repo.py
backend/schemas/: analytics.py  customer.py  dealer.py  predictions.py  sales.py
backend/services/: analytics_service.py  auth_service.py  customer_service.py  dealer_service.py  prediction_service.py  route_service.py  sales_service.py
backend/tests/: conftest.py
backend/utils/: date_utils.py  email_utils.py  file_utils.py  geo_utils.py
config/environments/: development.yml  production.yml  staging.yml
config/feature_flags/: features.yml
config/logging/: logging.yml  logstash.conf
config/security/: auth_config.yml
database/migrations/: alembic.ini  env.py  script.py.mako
database/schemas/: analytics_schema.sql  core_schema.sql  spatial_schema.sql
database/seeds/: customers.sql  dealers.sql  initial_data.sql
frontend/: nginx.conf  package-lock.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.js
infrastructure/helm/: Chart.yaml  values.yaml
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
integrations/external_apis/: geocoding_api.py  traffic_api.py
integrations/maps/: google_maps.py  mapbox.py  osm.py
integrations/notifications/: email_service.py  push_notifications.py  sms_service.py
integrations/payments/: paypal_integration.py  stripe_integration.py
integrations/weather/: forecast_api.py  weather_api.py
ml_engine/config/: feature_config.py  ml_config.py
ml_engine/deployment/: model_registry.py  model_serving.py  model_versioning.py
ml_engine/inference/: batch_predictor.py  predictor.py  real_time_predictor.py
ml_engine/models/: base_model.py
ml_engine/monitoring/: __init__.py  drift_detector.py  model_monitor.py  performance_tracker.py
ml_engine/training/: hyperparameter_tuning.py  model_evaluation.py  model_trainer.py  train_pipeline.py
mobile_app/: app.json  babel.config.js  metro.config.js  package.json
monitoring/alerts/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
scripts/data/: backup_database.py  data_migration.py  import_sample_data.py
scripts/deployment/: deploy.sh  health_check.sh  rollback.sh
scripts/ml/: deploy_models.py  evaluate_models.py  train_models.py
scripts/setup/: initialize_project.sh  install_dependencies.sh  setup_database.sh
scripts/utilities/: cleanup.py  log_analyzer.py  performance_profiler.py
stream_processing/consumers/: alert_consumer.py  gps_consumer.py  sales_consumer.py
tests/load_testing/: locustfile.py
(+96 files in other folders)
